update: add image spider

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Private configs
+weibo/configs.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm+all
 
